corrige appsettings.json

--- a/FornecedoresAPP/appsettings.json
+++ b/FornecedoresAPP/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "FornecedoresDB": "Server=localhost\\SQLEXPRESS;Database=FornecedoresDB;Integrated Security=True;Trusted_Connection=True;TrustServerCertificate=True;"
+    "FornecedoresDB": "Server={instancia-local};Database=FornecedoresDB;Integrated Security=True;Trusted_Connection=True;TrustServerCertificate=True;User Id={caso-tiver};Password={caso-tiver}"
   }
 }
